--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-  "workbench.colorCustomizations": {},
-  "python.analysis.autoImportCompletions": true
+  "workbench.colorCustomizations": {}
 }
